--- a/web/assets/scss/base/_base.scss
+++ b/web/assets/scss/base/_base.scss
@@ -205,15 +205,7 @@ nav:hover .forAnimate{
     margin: auto;
   }
 }
-.btn-primary {
-  color: #fff;
-  background-color: #2c3e50;
-  border-color: #2c3e50;
-}
-.btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:visited {
-  background-color: #3b546d;
-  border-color: #3b546d;
-}
+
 .pagination>.active>a,
 .pagination>.active>a:focus,
 .pagination>.active>a:hover,
